# fem_2d

./: .gitignore  CMakeLists.txt
src/: constraint.h  direct_solve.cpp  direct_solve.h  material.h  matrices.cpp  matrices.h  stresses.cpp  stresses.h  trimesh.h  utils.h  vec2.cpp  vec2.h  visual_debug.cpp  visual_debug.h
test/: fem_2d_tests.cpp
